<resources>
    <string name="author">Author: <b>Nurlan Mukhanov</b> aka <a href="mailto:nurike@gmail.com">Falseclock</a></string>
    <string name="app_name">HTC One Tweaker</string>
    <string name="RecordingFilterKeysIn">in</string>
    <string name="RecordingFilterKeysOut">out</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="fourteen">14</string>
    <string name="thirty">30</string>
    <string name="sixty">60</string>
    <string name="eightyfive">85</string>
    <string name="eightyseven">87</string>
    <string name="eightyeight">88</string>
    <string name="one_eighty">180</string>
    <string name="three_sixty">160</string>
    <string name="twenty">20</string>
    <string name="fifty">50</string>
    <string name="hundred1">100</string>
    <string name="hundred2">200</string>
    <string name="hundred3">300</string>
    <string name="hundred5">500</string>
    <string name="nine3">999</string>
    <string name="enableCallRecordingTitle">Voice Call Recording</string>
    <string name="enableCallRecordingSummary">Enables or disables voice call recording.</string>
    <string name="callSettingsTitle">Calling &amp; Dialing settings</string>
    <string name="enableAutoRecordingTitle">Call Auto Recording</string>
    <string name="enableAutoRecordingSummary">Enables voice call auto recording.</string>
    <string name="guiSettingsTitle">GUI settings</string>
    <string name="otherSettingsTitle">All other settings</string>
    <string name="allNotificationsExpandedTitle">All notifications expanded</string>
    <string name="allNotificationsExpandedSummary">Expands all notifications inside the notification drawer.</string>
    <string name="enableColoredSimLevelSummary">Colored GSM/WCDMA SIM signal level</string>
    <string name="enableColoredSimLevelTitle">Colored SIM level</string>
    <string name="enableColoredWiFiSummary">Blue WiFi level icon</string>
    <string name="enableColoredWiFiTitle">Colored WiFi</string>
    <string name="enableColoredWeatherSummary">Replaces B&amp;W icons</string>
    <string name="enableColoredWeatherTitle">Sense 4 weather icons</string>
    <string name="enableDialerHighLightSummary">Phonetic letters color</string>
    <string name="enableDialerHighLightTitle">Highlight dialer buttons</string>
    <string name="settingsAutoRecordingTitle">Autorecording settings</string>
    <string name="AutoRecordingType">What should be recorded</string>
    <string name="AutoRecordingPrune">Old records auto removal</string>
    <string name="AutoRecordingPruneTitle">Select prune in days for old records</string>
    <string name="AutoRecordingPrunePositive">Set</string>
    <string name="AutoRecordingPruneNegative">Cancel</string>
    <string name="AutoRecordingPruneDates">Days after records will be deleted: %1$d</string>
    <string name="AutoRecordingPruneNone">Not set, all records will be saved</string>
    <string name="AutoRecordingVibroTitle">Vibro confirmation</string>
    <string name="AutoRecordingVibroSummary">Vibration when recording starts/stops</string>
    <string name="enablePopupCharTitle">Advanced RUSSIAN keyboard</string>
    <string name="enablePopupCharSummary">add icons with popup options</string>
    <string name="ColoredSimLevelPreferenceTitle">SIM color schemes</string>
    <string name="ColoredSimLevelPreferenceSummary">Changing colors theme for icons</string>
    <string name="ColoredSimLevelPreferenceTitle1">SIM1 color scheme</string>
    <string name="ColoredSimLevelPreferenceTitle2">SIM2 color scheme</string>
    <string name="NotificationScreenSummary">Status bar and slider</string>
    <string name="NotificationScreenTitle">Hide notifications</string>
    <string name="disableDeliveryNotificationTitle">SMS delivery notification</string>
    <string name="disableDeliveryNotificationSummary">if delivery request is enabled</string>
    <string name="disableADBNotificationTitle">USB debugging connected</string>
    <string name="disableUSBNotificationTitle">USB connected</string>
    <string name="disableSyncNotificationTitle">HTC Sync Manager</string>
    <string name="disableMTPNotificationTitle">Media device [MTP] connected</string>
    <string name="SystemScreenSummary">related to the whole device and software</string>
    <string name="SystemScreenTitle">System wide tweaks</string>
    <string name="LedScreenSummary">notifications &amp; charging</string>
    <string name="LedScreenTitle">Notification LED</string>
    <string name="chargingLedSummary">removes only charging for charging</string>
    <string name="chargingLedTitle">Disable charging flashlight</string>
    <string name="flashlightDuringChargingSummary">notifications will have priority</string>
    <string name="flashlightDuringChargingTitle">Flash notifications during charging</string>
    <string name="flashlightTimeoutSummary">how long it will last</string>
    <string name="flashlightTimeoutTitle">Flashlight timeout</string>
    <string name="flashlightTimeoutHint">In minutes. 0 is no time-out</string>
    <string name="GuiScreenSummary">color, size, etc&#8230;</string>
    <string name="GuiScreenTitle">GUI settings</string>
    <string name="hue_settings">Hue</string>
    <string name="saturation_settings">Saturation</string>
    <string name="light_settings">Lightness</string>
    <string name="contrast_settings">Contrast</string>
    <string name="qwerty_rus">Full Qwerty Russian</string>
    <string name="land_qwerty_rus">Landscape Qwerty Russian</string>
    <string name="alternates_for_slash">\\ /</string>
    <string name="alternates_for_semicolon">;</string>
    <string name="alternates_for_asterisk">*</string>
    <string name="alternates_for_dotcom">.com .ru .kz .ua .net .org .edu</string>
    <string name="alternates_for_tilde">~</string>
    <string name="alternates_for_ara_rparen">) > ] }</string>
    <string name="alternates_for_apostrophe">"' `"</string>
    <string name="alternates_for_at">\@</string>
    <string name="alternates_for_3">3</string>
    <string name="alternates_for_number">\# №</string>
    <string name="alternates_for_dollar">$ € £ ₴ ₸</string>
    <string name="alternates_for_percent">% ‰</string>
    <string name="alternates_for_8">8</string>
    <string name="alternates_for_ampersand">&amp;</string>
    <string name="alternates_for_plus">+</string>
    <string name="alternates_for_colon">; :</string>
    <string name="alternates_for_dash">— ~ -</string>
    <string name="alternates_for_9">9</string>
    <string name="alternates_for_0">0</string>
    <string name="alternates_for_1">1</string>
    <string name="alternates_for_4">4</string>
    <string name="alternates_for_5">5</string>
    <string name="alternates_for_7">7</string>
    <string name="alternates_for_lparen">( &lt; [ {</string>
    <string name="alternates_for_2">2</string>
    <string name="alternates_for_dquotation">\" « »</string>
    <string name="alternates_for_6">6</string>
    <string name="alternates_for_underscore">_</string>
    <string name="alternates_label_equal">=</string>
    <string name="alternates_for_graveaccent">`</string>
    <string name="recordingSeparateDir">In Incoming &amp; Outgoing dirs</string>
    <string name="recordingFileFlag">Add IN &amp; OUT to the file name</string>
    <string name="RecordingStorageSummary"></string>
    <string name="RecordingStorageTitle">How to store records?</string>
    <string name="LatinSet">Latin alphabet selected</string>
    <string name="PhoneticSet">Phonetic alphabet selected</string>
    <string name="DialerButtonToast">Use pinch zoom on color palette to change font size. Click on left button to switch alphabet.</string>
    <string name="slot1_name_title">Slot 1 name</string>
    <string name="slot2_name_title">Slot 2 name</string>
    <string name="dual_settings_title">Dual network manager</string>
    <string name="preferred_network_1">Slot 1</string>
    <string name="preferred_network_2">Slot 2</string>
    <string name="recordingFilterIncoming">All incoming calls</string>
    <string name="recordingFilterOutgoing">All outgoing calls</string>
    <string name="RecordingFilterTitle">Record calls by type</string>
    <string name="RecordingCallerAll">All type of callers</string>
    <string name="RecordingCallerKnown">Only from phonebook</string>
    <string name="RecordingCallerUnknown">Only unknown numbers</string>
    <string name="RecordingCallerTitle">Which callers to record?</string>
    <string name="RecordingDeleteNone">Do not delete</string>
    <string name="RecordingDeleteByCount">By total max count</string>
    <string name="RecordingDeleteBySize">By total max size</string>
    <string name="RecordingDeleteTitle">Autodelete settings</string>
    <string name="quickPullDownSummary">Activate the quick settings by swiping right side of screen</string>
    <string name="quickPullDownTitle">Settings quick pulldown</string>
    <string name="messages_of">Messages</string>
    <string name="save_last">Save last</string>
    <string name="days_of">Days</string>
    <string name="delete_after">Delete after</string>
    <string name="delete_after_summary">in days</string>
    <string name="save_last_summary">records count</string>
    <string name="RecordingDeleteCat">Autodelete options</string>
    <string name="RecordingFilterCat">Filtering options</string>
    <string name="RecordingSaveCat">Sorage options</string>
    <string name="ColoredDataIconsSummary">tweak enabler</string>
    <string name="ColoredDataIconsTitle">Data icons</string>
    <string name="ColoredDataIconsColorSummary">color settings</string>
    <string name="ColoredDataIconsColorTitle">Data transfer icons</string>
    <string name="ColoredWiFiIconsColorSummary">color settings</string>
    <string name="ColoredWiFiIconsColorTitle">WiFi signal icons</string>
    <string name="DataScreenTitle">Data transfer and signal tweaks</string>
    <string name="DataScreenSummary">WiFi, Signal Level, Data transfer</string>
    <string name="ContactDialScreenTitle">Dialer and Contacts tweak</string>
    <string name="ContactDialScreenSummary">interface, color, settings</string>
    <string name="enableColorCallIndicatorTitle">Colored call indicator</string>
    <string name="enableColorCallIndicatorSummary">In call history to identify incoming and outgoing</string>
    <string name="enableUnreadHighLightTitle">Highlight unread message threads</string>
    <string name="enableUnreadHighLightSummary">Dialor will have blue background</string>
    <string name="enableHideSMSBadgeSummary">only for SMS and MMS listings</string>
    <string name="enableHideSMSBadgeTitle">Hide photo badge in dialogs</string>
    <string name="enableSMSNotifyToDialogSummary">by default, when you clicking on notification, opens full listing instead of current dialog</string>
    <string name="enableSMSNotifyToDialogTitle">SMS notification opens dialog</string>
    <string name="sdcardPermissionTitle">Allow SD Card full access</string>
    <string name="sdcardPermissionSummary">fix read and write permission</string>
    <string name="enableSIPTitle">SIP Telephone on Dual SIM</string>
    <string name="enableSIPSummary">Just enables it</string>
    <string name="enablePhotoPrefixTitle">Add date/time to camera shots</string>
    <string name="enablePhotoPrefixSummary">IMAG0001.jpg</string>
    <string name="disableRoamingDataNotification">Data roaming</string>
    <string name="disableRoamingDataNotificationSummary">You have lost data connectivity…</string>
    <string name="SlotIconIndicator">Slot indicator icon</string>
</resources>